Added readme with license.
Added models used for testing.
Updated program.cs to use new
file paths

Updated CSProj to include all assets in build.

--- a/Sigrun/Sigrun.csproj
+++ b/Sigrun/Sigrun.csproj
@@ -24,6 +24,9 @@
       <None Update="Shader\shader.vert">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <Content Include="Assets\**\*">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
