Added FPS and Frametime to debug.
Added texture index to shaders

--- a/Sigrun/Sigrun.csproj
+++ b/Sigrun/Sigrun.csproj
@@ -19,10 +19,10 @@
 
     <ItemGroup>
       <None Update="Shader\shader.frag">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Shader\shader.vert">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <Content Include="Assets\**\*">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
